# ChangeLog for media-sound/snd
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/snd/ChangeLog,v 1.42 2008/07/12 08:04:58 aballier Exp $

  12 Jul 2008; Alexis Ballier <aballier@gentoo.org> -snd-9.7.ebuild:
  remove old

*snd-9.9 (12 May 2008)

  12 May 2008; Alexis Ballier <aballier@gentoo.org> +snd-9.9.ebuild:
  version bump

  12 May 2008; Alexis Ballier <aballier@gentoo.org> -snd-9.2.ebuild:
  remove unused version

*snd-9.7 (07 Mar 2008)

  07 Mar 2008; Alexis Ballier <aballier@gentoo.org> +snd-9.7.ebuild:
  version bump

  29 Jul 2007; Christoph Mende <angelos@gentoo.org> snd-9.1.ebuild:
  Stable on amd64 wrt bug #187007

  29 Jul 2007; Tobias Scherbaum <dertobi123@gentoo.org> snd-9.1.ebuild:
  ppc stable, bug #187007

  29 Jul 2007; Raúl Porcel <armin76@gentoo.org> snd-9.1.ebuild:
  x86 stable wrt #187007

*snd-9.2 (27 Jul 2007)

  27 Jul 2007; Alexis Ballier <aballier@gentoo.org> +snd-9.2.ebuild:
  version bump

*snd-9.1 (13 Jun 2007)

  13 Jun 2007; Alexis Ballier <aballier@gentoo.org> +snd-9.1.ebuild:
  version bump

  14 Mar 2007; Michael Sterrett <mr_bones_@gentoo.org> -snd-7.10.ebuild:
  clean out non-modX ebuild

  14 Mar 2007; Michael Sterrett <mr_bones_@gentoo.org> snd-7.10.ebuild,
  snd-7.15.ebuild, snd-7.15-r1.ebuild, snd-8.8.ebuild:
  drop sparc keywords per sparc team

*snd-8.8 (10 Mar 2007)

  10 Mar 2007; Alexis Ballier <aballier@gentoo.org>
  +files/snd-8.8-parallelmake.patch, +snd-8.8.ebuild:
  Version bump, bug #157205

  10 Jan 2007; Piotr Jaroszyński <peper@gentoo.org> snd-7.10.ebuild,
  snd-7.15.ebuild, snd-7.15-r1.ebuild:
  Dependency update: dev-util/guile -> dev-scheme/guile.

  14 Dec 2006; Christian Faulhammer <opfer@gentoo.org> snd-7.15-r1.ebuild:
  stable x86, bug #153205

  21 Nov 2006; Joseph Jezak <josejx@gentoo.org> snd-7.15-r1.ebuild:
  Marked ppc stable for bug #153205.

  20 Nov 2006; <blubb@gentoo.org> snd-7.15.ebuild:
  stable on amd64
