@@ -2,15 +2,17 @@
 Hash: SHA1
 
 DIST snd-9.1.tar.gz 8561354 RMD160 cd5ae0b740534da87a0f300c2e25d2403f5628dd SHA1 2da3db9b3e6b51adc74eca1e8735781ce68daf04 SHA256 2de0332afcaeba9ad2e078cbc149bfce2e3e29ef6c35aae112c6d23c2124dbee
+DIST snd-9.10.tar.gz 13363567 RMD160 e24ede7ca0dcfbb2cf542c6c9b53a1b095f3c5a9 SHA1 fdfbccc8e680a4bbdf3434ef4821f718fd82d0df SHA256 876023c368113d4145a319c683971cea909371ad2907f2eb20825c7b553469d5
 DIST snd-9.9.tar.gz 12349176 RMD160 39561a38d8bba7ead73a16fc7647cb2bd6ef275a SHA1 8c00b1d48d66032a9085b8ae652a5d25c8ef14a2 SHA256 69173ffe29168465d06f3d54ea4d6c7fc84453e8eda566d5315acde3e480096f
 EBUILD snd-9.1.ebuild 2671 RMD160 43718e514c6917a34edfa599711c0f49c202c3f6 SHA1 04135d735b6e01c2b18d85ac10bcaca95b3a345c SHA256 cd4ee362fe54f0fc2eea2ca6fd8510ebe9dddc81c86c1868df5a7a634dfc7685
+EBUILD snd-9.10.ebuild 2787 RMD160 bd7d8114cdd97d579c0a601f48ac06f0cbf34cd6 SHA1 7b6168fa9c20de6c173e70a3be261aacdb240214 SHA256 80031a3200bd1056b3fe8e961ab280b226bceed26b7473c911ed78cfd7cab359
 EBUILD snd-9.9.ebuild 2785 RMD160 afc8a4d1ec1fa51af330d6ded9292392e79631e2 SHA1 40b36c394f470108cce80b2aefe4d363e1a08efe SHA256 5ac143ecbacb525d0ca88d62bd0e63e37f7470acff5daa3e6527fc2ad2d7f5d1
-MISC ChangeLog 5165 RMD160 a437751159f1b723967128546c9681f36b3bf6e9 SHA1 a5a8dc8696730c54b7e85b0a286e9c9da58a6cc0 SHA256 e33b1584da75cd26f440daecca394478dace3fbc7b409ff071065e2f61aa7220
+MISC ChangeLog 5276 RMD160 e325ad55fc24f41adf4118ce2dbff29ce716815d SHA1 3201f29bf2be7e12eedc8914c7d5ec8ee25a7549 SHA256 829d6a0bce2b5f465f858af509a0ca12e898db1b83c192b6b5aa09cacf060780
 MISC metadata.xml 252 RMD160 68406e733c1a9f26b7ab37e79ab53b3f59305b3a SHA1 6e5cc1551616801a2f257d688e6fc286044c3499 SHA256 5ab00710d822d203a1a38e1b6a9754137de4fe2cf5c4e79470419ed3f3927450
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkh4ZbIACgkQvFcC4BYPU0rwQQCgjIy2Xzv3QT2gvvY9q14lLwvZ
-K+4An0o3mWBSNhU5SONU/BExakZLTHu2
-=yY+9
+iEYEARECAAYFAkh4bkMACgkQvFcC4BYPU0o5pwCdH0BtsakHYj7nFJyP739+yvPu
+fHwAn2QOuNqeeM8479ne5I3q4c+OLeBg
+=9CmI
 -----END PGP SIGNATURE-----
